# SharedMemoryBuffer

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
include/smb/: HeapMemory.hpp  IMemory.hpp  SharedMemory.hpp
src/: main.cpp
tests/: CMakeLists.txt  HeapMemoryTest.cpp  SharedMemoryTest.cpp
tests/mocks/: MockMemory.hpp
